# glyphos

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  DEV.md  README.md  SECURITY.md  justfile
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  docker.yml
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: commands.rs  glyph_decode.rs  glyph_encode.rs  lib.rs
docker/: Dockerfile
docs/: 000.why.md  001.whats-missing.md  002.glyph-system.md  003.thinking-beyond.md  004.substrate-of-cognition.md  005.cognitive-propagation.md  006.epistemic-integrity.md  007.epistemological-bedrock.md  008.gap-audit.md  009.project-scafold.md  epistemology.md  glossary.md  infrastructure.md
examples/: sun.glyph.json5
spec/: glyph-format.md
tests/: test_cli.rs
tests/wip/: decode-test.sh  encode-test.sh  test_glyph.glyph  test_glyph.glyph.json  test_glyph.json5
tools/: glyph-decode.rs  glyph-encode.rs
utils/: Cargo.toml
utils/src/: error.rs  logger.rs
whitepaper/: glyph-whitepaper.md  outline.md
