[package]
name = "core"
version = "1.0.1"
authors = ["Bartek Kus <bartekus@gmail.com>"]
description = "The application core code"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
# Base64 encoding/decoding
base64 = "0.21"

# QR Code encoding
qrcode = "0.14"
image = "0.24"

# QR Code decoding
bardecoder = "0.5"

rand = "0.9.1"
log = "0.4.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.1"
serde_yaml = "0.9"

# Binary encoding
ciborium = "0.2"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
blake3 = "1.0"
ed25519-dalek = "2.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Hex encoding/decoding
hex = "0.4"
