[package]
name = "utils"
version = "1.0.1"
authors = ["Bartek Kus <bartekus@gmail.com>"]
description = "Various utilities and functionalities"
edition = "2021"

[features]
nightly = []
termlog = []
syslog = []
journald = []

[dependencies]
thiserror = "2.0.12"
backtrace = "0.3.75"
color-backtrace = "0.7.0"
config = "0.15.11"
lazy_static = "1.5.0"
slog = "2.7.0"
slog-syslog = "0.13.0"
slog-term = "2.9.1"
slog-scope = "4.4.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
# Move these here
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

# Add dependencies for error conversions
serde_json = "1.0"
serde_yaml = "0.9"
serde_json5 = "0.1"
ciborium = "0.2"
hex = "0.4"
ed25519-dalek = "2.0"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
slog-journald = "2.2.0"
